# rust-redis-rs

./: Cargo.toml  LICENSE  README.md
benches/: redis.rs
doc/: architecture.md
examples/: basic.rs  with_tracing.rs
src/: client.rs  commands.rs  connection.rs  error.rs  lib.rs  multi.rs  parser.rs  pipeline.rs  pool.rs  pubsub.rs  script.rs  sentinel.rs
tests/: integration_test.rs
