[package]
name = "rust-redis-rs"
version = "0.1.0"
edition = "2021"
description = "Redis client for Rust - async implementation with Tokio"
license = "BSD-2-Clause"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tracing = "0.1"
thiserror = "2"
bytes = "1"
itoa = "1"
sha1 = "0.10"
hex = "0.4"
async-recursion = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
tokio-test = "0.4"
tokio-util = { version = "0.7", features = ["compat"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bench]]
name = "redis"
harness = false
